--- a/src/components/Reminders.css
+++ b/src/components/Reminders.css
@@ -163,7 +163,7 @@
 }
 
 .reminder-checkbox:hover {
-  color: #00637C;
+  color: var(--primary-500);
 }
 
 .reminder-text {
@@ -246,7 +246,7 @@
 
 .btn-icon:hover {
   background-color: #f0f0f0;
-  color: #00637C;
+  color: var(--primary-500);
 }
 
 .btn-icon.btn-delete:hover {
