--- a/src/components/ClientList.css
+++ b/src/components/ClientList.css
@@ -32,7 +32,7 @@
   left: 0;
   right: 0;
   height: 3px;
-  background: linear-gradient(90deg, var(--primary-500) 0%, var(--primary-400) 50%, var(--primary-300) 100%);
+  background: linear-gradient(90deg, var(--primary-500) 0%, var(--primary-400) 100%);
   transform: scaleX(0);
   transform-origin: left;
   transition: transform var(--transition-base);
