--- a/src/components/ReminderForm.css
+++ b/src/components/ReminderForm.css
@@ -51,7 +51,7 @@
 .form-group input:focus,
 .form-group select:focus {
   outline: none;
-  border-color: #00637C;
+  border-color: var(--primary-500);
   box-shadow: 0 0 0 3px rgba(0, 99, 124, 0.1);
 }
 
@@ -73,12 +73,12 @@
 }
 
 .btn-primary {
-  background-color: #00637C;
+  background-color: var(--primary-500);
   color: white;
 }
 
 .btn-primary:hover {
-  background-color: #004D5F;
+  background-color: var(--primary-600);
 }
 
 .btn-secondary {
